Fix the issue where grid items overlap with nav bar
Made the z-index of the nav-bar 20, so hopefully nothing goes over it.

--- a/global.css
+++ b/global.css
@@ -20,6 +20,7 @@
 }
 
 .nav-bar {
+    z-index: 20;
     background-color: var(--nav-bg);
     border-bottom: var(--accent1) 5px solid;
     height: fit-content;
